--- a/style.css
+++ b/style.css
@@ -148,3 +148,12 @@ body {
     scrollbar-gutter: stable; /* 防止滚动条出现时内容左右晃动 */
     scroll-behavior: smooth;
 }
+
+.markdown-body img {
+    border-radius: 0.5rem;
+    cursor: zoom-in;
+    transition: transform 0.2s;
+}
+.markdown-body img:active {
+    transform: scale(0.98);
+}
