--- a/upload/upload_style.css
+++ b/upload/upload_style.css
@@ -79,3 +79,12 @@
     padding: 1rem;
     border-radius: 0.75rem;
 }
+
+.markdown-body img {
+    border-radius: 0.5rem;
+    cursor: zoom-in;
+    transition: transform 0.2s;
+}
+.markdown-body img:active {
+    transform: scale(0.98);
+}
